Needy Change Log
-------------------------------------------------------------------------------
https://github.com/dx42/Needy


Changes in version 0.3 (Jul 2017)
--------------------------------------
- ByArtifactHtmlReportWriter: Add <meta http-equiv="Content-Type" content="text/html">; Make report title bigger


Changes in version 0.3 (Jul 2017)
--------------------------------------
- Change package to org.dx42.needy.
- Publish to JCenter; group = org.dx42.
- Introduce parser sub-package.
- DslNeedyConfiguration: Remove support for applicationName(String) and applicationName(List<String>).