@@ -6,6 +6,7 @@ https://github.com/dx42/Needy
 Changes in version 0.3 (Jul 2017)
 --------------------------------------
 - ByArtifactHtmlReportWriter: Add <meta http-equiv="Content-Type" content="text/html">; Make report title bigger
+- AbstractReportWriter: Create parent directories if necessary.
 
 
 Changes in version 0.3 (Jul 2017)
